# JustCoding

./: .gitignore
CodingCpp/: CMakeLists.txt  README.txt
CodingCpp/Projects/: CMakeLists.txt
CodingCpp/Projects/Cache/: Cache_LRU.cpp  Cache_LRU.h
CodingCpp/Triangle/: Triangle.cpp  Triangle_Template.cpp
OpenGL/: CMakeLists.txt  README.txt
OpenGL/Common/Shader/: Shader.cpp  Shader.h
OpenGL/Libraries/: CMakeLists.txt
OpenGL/Projects/Triangle/: Shader.fs  Shader.vs  Triangle.cpp
